--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 <p><b>Contact Me:</b> <em>shaoyu.cai [AT] my [DOT] cityu [DOT] edu [DOT] hk</em></p> 
               </div>
               <p>
-                [<a href="assets/img/CV.pdf">CV</a>] [<a href="https://scholar.google.com/citations?user=wUpkNc8AAAAJ&hl=en">Google Scholar</a>]
+                [<a href="assets/img/Academic_CV_Shaoyu_Cai.pdf">CV</a>] [<a href="https://scholar.google.com/citations?user=wUpkNc8AAAAJ&hl=en">Google Scholar</a>]
                 [<a href="https://dblp.org/pid/246/5542.html">dblp</a>][<a href="https://www.researchgate.net/profile/Shaoyu-Cai-2">ResearchGate</a>]
               </p>
                
