--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <div class="col-lg-8 pt-4 pt-lg-0 content"> 
               <p class="font-italic">
                 <h5>FrictGAN: Frictional Signal Generation from Fabric Texture Images using Generative Adversarial Network (<b>Best Paper Audience Choice Award</b>)</h5>
-                <p><em>Cai, Shaoyu, Yuki Ban, Takuji Narumi, and Kening Zhu. In ICAT-EGVE2020: International Conference on Artificial Reality and Telexistence & Eurographics Symposium on Virtual Environments, pp. 11-15. The Eurographics Association, 2020.</em></p>
+                <p><em><b>Shaoyu Cai</b>, Yuki Ban, Takuji Narumi, and Kening Zhu. In ICAT-EGVE2020: International Conference on Artificial Reality and Telexistence & Eurographics Symposium on Virtual Environments, pp. 11-15. The Eurographics Association, 2020.</em></p>
               </p>
             </div>
           </div>
@@ -167,7 +167,7 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content"> 
             <p class="font-italic">
               <h5>ThermAirGlove: A pneumatic glove for thermal perception and material identification in virtual reality</h5>
-              <p><em>Cai, Shaoyu, Pingchuan Ke, Takuji Narumi, and Kening Zhu. In 2020 IEEE Conference on Virtual Reality and 3D User Interfaces (VR), pp. 248-257. IEEE, 2020.</em></p>
+              <p><em><b>Shaoyu Cai</b>, Pingchuan Ke, Takuji Narumi, and Kening Zhu. In 2020 IEEE Conference on Virtual Reality and 3D User Interfaces (VR), pp. 248-257. IEEE, 2020.</em></p>
             </p>
           </div>
         </div>
@@ -179,7 +179,7 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content"> 
             <p class="font-italic">
               <h5>Demonstration of thermairglove: A pneumatic glove for material perception in virtual reality through thermal and force feedback</h5>
-              <p><em>Cai, Shaoyu, Pingchuan Ke, Shanshan Jiang, Takuji Narumi, and Kening Zhu. In SIGGRAPH Asia 2019 Emerging Technologies, pp. 11-12. 2019.</em></p>
+              <p><em><b>Shaoyu Cai</b>, Pingchuan Ke, Shanshan Jiang, Takuji Narumi, and Kening Zhu. In SIGGRAPH Asia 2019 Emerging Technologies, pp. 11-12. 2019.</em></p>
             </p>
           </div>
         </div>
@@ -191,7 +191,7 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content"> 
             <p class="font-italic">
               <h5>A sense of ice and fire: Exploring thermal feedback with multiple thermoelectric-cooling elements on a smart ring</h5>
-              <p><em>Zhu, Kening, Simon Perrault, Taizhou Chen, Shaoyu Cai, and Roshan Lalintha Peiris. International Journal of Human-Computer Studies 130 (2019): 234-247.</em></p>
+              <p><em>Zhu, Kening, Simon Perrault, Taizhou Chen, <b>Shaoyu Cai</b>, and Roshan Lalintha Peiris. International Journal of Human-Computer Studies 130 (2019): 234-247.</em></p>
             </p>
           </div>
         </div>
@@ -203,7 +203,7 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content"> 
             <p class="font-italic">
               <h5>Embodied Weather: Promoting Public Understanding of Extreme Weather Through Immersive Multi-Sensory Virtual Reality</h5>
-              <p><em>Ke, Pingchuan, Kai-Ning Keng, Shanshan Jiang, Shaoyu Cai, Zhiyi Rong, and Kening Zhu. In The 17th International Conference on Virtual-Reality Continuum and its Applications in Industry, pp. 1-2. 2019.</em></p>
+              <p><em>Ke, Pingchuan, Kai-Ning Keng, Shanshan Jiang, <b>Shaoyu Cai</b>, Zhiyi Rong, and Kening Zhu. In The 17th International Conference on Virtual-Reality Continuum and its Applications in Industry, pp. 1-2. 2019.</em></p>
             </p>
           </div>
         </div>
@@ -215,7 +215,7 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content"> 
             <p class="font-italic">
               <h5>HapTwist: creating interactive haptic proxies in virtual reality using low-cost twistable artefacts</h5>
-              <p><em>Zhu, Kening, Taizhou Chen, Shaoyu Cai, Feng Han, and Yi-Shiun Wu. In SIGGRAPH Asia 2018 Virtual & Augmented Reality, pp. 1-2. 2018.</em></p>
+              <p><em>Zhu, Kening, Taizhou Chen, <b>Shaoyu Cai</b>, Feng Han, and Yi-Shiun Wu. In SIGGRAPH Asia 2018 Virtual & Augmented Reality, pp. 1-2. 2018.</em></p>
             </p>
           </div>
         </div>
