--- a/index.html
+++ b/index.html
@@ -156,6 +156,9 @@
               <p class="font-italic">
                 <h5>FrictGAN: Frictional Signal Generation from Fabric Texture Images using Generative Adversarial Network (<b>Best Paper Audience Choice Award</b>)</h5>
                 <p><em><b>Shaoyu Cai</b>, Yuki Ban, Takuji Narumi, and Kening Zhu. In ICAT-EGVE2020: International Conference on Artificial Reality and Telexistence & Eurographics Symposium on Virtual Environments, pp. 11-15. The Eurographics Association, 2020.</em></p>
+		[<a href="https://sweb.cityu.edu.hk/hongbofu/doc/DeepFaceDrawing_SIGGRAPH2020.pdf">Paper</a>]
+              	[<a href="https://www.youtube.com/watch?v=b8DLNfxouQ4">Presentation Video</a>]
+              	[<a href="https://github.com/shaoyuca/FrictGAN">Code</a>]
               </p>
             </div>
           </div>
