--- a/index.html
+++ b/index.html
@@ -156,9 +156,9 @@
               <p class="font-italic">
                 <h5>FrictGAN: Frictional Signal Generation from Fabric Texture Images using Generative Adversarial Network (<b>Best Paper Audience Choice Award</b>)</h5>
                 <p><em><b>Shaoyu Cai</b>, Yuki Ban, Takuji Narumi, and Kening Zhu. In ICAT-EGVE2020: International Conference on Artificial Reality and Telexistence & Eurographics Symposium on Virtual Environments, pp. 11-15. The Eurographics Association, 2020.</em></p>
-		[<a href="https://sweb.cityu.edu.hk/hongbofu/doc/DeepFaceDrawing_SIGGRAPH2020.pdf">Paper</a>]
-              	[<a href="https://www.youtube.com/watch?v=b8DLNfxouQ4">Presentation Video</a>]
-              	[<a href="https://github.com/shaoyuca/FrictGAN">Code</a>]
+		[<a href="assets/img/frictgan_paper.pdf">Paper</a>]
+		[<a href="https://github.com/shaoyuca/FrictGAN">Code</a>]
+              	[<a href="https://www.youtube.com/watch?v=b8DLNfxouQ4">Presentation</a>]
               </p>
             </div>
           </div>
@@ -171,7 +171,9 @@
             <p class="font-italic">
               <h5>ThermAirGlove: A pneumatic glove for thermal perception and material identification in virtual reality</h5>
               <p><em><b>Shaoyu Cai</b>, Pingchuan Ke, Takuji Narumi, and Kening Zhu. In 2020 IEEE Conference on Virtual Reality and 3D User Interfaces (VR), pp. 248-257. IEEE, 2020.</em></p>
-            </p>
+               [<a href="assets/img/thermairglove_paper.pdf">Paper</a>]
+               [<a href="https://www.youtube.com/watch?v=VgsmilcO1yU">Video</a>]
+	      </p>
           </div>
         </div>
 
@@ -183,7 +185,9 @@
             <p class="font-italic">
               <h5>Demonstration of thermairglove: A pneumatic glove for material perception in virtual reality through thermal and force feedback</h5>
               <p><em><b>Shaoyu Cai</b>, Pingchuan Ke, Shanshan Jiang, Takuji Narumi, and Kening Zhu. In SIGGRAPH Asia 2019 Emerging Technologies, pp. 11-12. 2019.</em></p>
-            </p>
+              [<a href="assets/img/thermairglove_etech.pdf">Paper</a>]
+              [<a href="https://www.youtube.com/watch?v=VgsmilcO1yU">Video</a>]
+	    </p>
           </div>
         </div>
 
@@ -194,8 +198,10 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content"> 
             <p class="font-italic">
               <h5>A sense of ice and fire: Exploring thermal feedback with multiple thermoelectric-cooling elements on a smart ring</h5>
-              <p><em>Zhu, Kening, Simon Perrault, Taizhou Chen, <b>Shaoyu Cai</b>, and Roshan Lalintha Peiris. International Journal of Human-Computer Studies 130 (2019): 234-247.</em></p>
-            </p>
+              <p><em>Kening Zhu, Simon Perrault, Taizhou Chen, <b>Shaoyu Cai</b>, and Roshan Lalintha Peiris. International Journal of Human-Computer Studies 130 (2019): 234-247.</em></p>
+              [<a href="assets/img/thermalring_paper.pdf">Paper</a>]
+              [<a href="https://www.youtube.com/watch?v=j4l4NHX2QLM&t=1s">Video</a>]
+	      </p>
           </div>
         </div>
 
@@ -206,8 +212,10 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content"> 
             <p class="font-italic">
               <h5>Embodied Weather: Promoting Public Understanding of Extreme Weather Through Immersive Multi-Sensory Virtual Reality</h5>
-              <p><em>Ke, Pingchuan, Kai-Ning Keng, Shanshan Jiang, <b>Shaoyu Cai</b>, Zhiyi Rong, and Kening Zhu. In The 17th International Conference on Virtual-Reality Continuum and its Applications in Industry, pp. 1-2. 2019.</em></p>
-            </p>
+              <p><em>Pingchuan Ke, Kai-Ning Keng, Shanshan Jiang, <b>Shaoyu Cai</b>, Zhiyi Rong, and Kening Zhu. In The 17th International Conference on Virtual-Reality Continuum and its Applications in Industry, pp. 1-2. 2019.</em></p>
+              [<a href="assets/img/weather_paper.pdf">Paper</a>]
+              [<a href="https://www.youtube.com/watch?v=GqTk9XIP8mo&t=8s">Video</a>]
+	    </p>
           </div>
         </div>
 
@@ -218,8 +226,10 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content"> 
             <p class="font-italic">
               <h5>HapTwist: creating interactive haptic proxies in virtual reality using low-cost twistable artefacts</h5>
-              <p><em>Zhu, Kening, Taizhou Chen, <b>Shaoyu Cai</b>, Feng Han, and Yi-Shiun Wu. In SIGGRAPH Asia 2018 Virtual & Augmented Reality, pp. 1-2. 2018.</em></p>
-            </p>
+              <p><em>Kening Zhu, Taizhou Chen, <b>Shaoyu Cai</b>, Feng Han, and Yi-Shiun Wu. In SIGGRAPH Asia 2018 Virtual & Augmented Reality, pp. 1-2. 2018.</em></p>
+              [<a href="assets/img/haptwist_paper.pdf">Paper</a>]
+              [<a href="https://www.youtube.com/watch?v=SzRrm570jZA">Video</a>]
+     	     </p>
           </div>
         </div>
 
