--- a/index.html
+++ b/index.html
@@ -155,7 +155,8 @@
             <div class="col-lg-8 pt-4 pt-lg-0 content"> 
               <p class="font-italic">
                 <h5>FrictGAN: Frictional Signal Generation from Fabric Texture Images using Generative Adversarial Network (<b>Best Paper Audience Choice Award</b>)</h5>
-                <p><em><b>Shaoyu Cai</b>, Yuki Ban, Takuji Narumi, and Kening Zhu. In ICAT-EGVE2020: International Conference on Artificial Reality and Telexistence & Eurographics Symposium on Virtual Environments, pp. 11-15. The Eurographics Association, 2020.</em></p>
+                <p><em><b>Shaoyu Cai</b>, Yuki Ban, Takuji Narumi, and Kening Zhu</em></p> 
+		<p><em>In ICAT-EGVE2020: International Conference on Artificial Reality and Telexistence & Eurographics Symposium on Virtual Environments, pp. 11-15. The Eurographics Association, 2020.</em></p>
 		[<a href="assets/img/frictgan_paper.pdf">Paper</a>]
 		[<a href="https://github.com/shaoyuca/FrictGAN">Code</a>]
               </p>
