--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <div class="col-lg-8 pt-4 pt-lg-0 content"> 
               <p class="font-italic">
                 <h5>FrictGAN: Frictional Signal Generation from Fabric Texture Images using Generative Adversarial Network (<b>Best Paper Audience Choice Award</b>)</h5>
-                <p><<b>Shaoyu Cai</b>, Yuki Ban, Takuji Narumi, and Kening Zhu</p> 
+                <p><b>Shaoyu Cai</b>, Yuki Ban, Takuji Narumi, and Kening Zhu</p> 
 		<p><em>In ICAT-EGVE2020: International Conference on Artificial Reality and Telexistence & Eurographics Symposium on Virtual Environments, pp. 11-15. The Eurographics Association, 2020.</em></p>
 		[<a href="assets/img/frictgan_paper.pdf">Paper</a>]
 		[<a href="https://github.com/shaoyuca/FrictGAN">Code</a>]
@@ -184,7 +184,8 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content"> 
             <p class="font-italic">
               <h5>Demonstration of thermairglove: A pneumatic glove for material perception in virtual reality through thermal and force feedback</h5>
-              <p><em><b>Shaoyu Cai</b>, Pingchuan Ke, Shanshan Jiang, Takuji Narumi, and Kening Zhu. In SIGGRAPH Asia 2019 Emerging Technologies, pp. 11-12. 2019.</em></p>
+              <p><b>Shaoyu Cai</b>, Pingchuan Ke, Shanshan Jiang, Takuji Narumi, and Kening Zhu</p>
+	      <p><em> In SIGGRAPH Asia 2019 Emerging Technologies, pp. 11-12. 2019.</em></p>
               [<a href="assets/img/thermairglove_etech.pdf">Paper</a>]
               [<a href="https://www.youtube.com/watch?v=VgsmilcO1yU">Video</a>]
 	    </p>
@@ -198,7 +199,8 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content"> 
             <p class="font-italic">
               <h5>A sense of ice and fire: Exploring thermal feedback with multiple thermoelectric-cooling elements on a smart ring</h5>
-              <p><em>Kening Zhu, Simon Perrault, Taizhou Chen, <b>Shaoyu Cai</b>, and Roshan Lalintha Peiris. International Journal of Human-Computer Studies 130 (2019): 234-247.</em></p>
+              <p>Kening Zhu, Simon Perrault, Taizhou Chen, <b>Shaoyu Cai</b>, and Roshan Lalintha Peiris</p>
+	      <p><em>International Journal of Human-Computer Studies 130 (2019): 234-247.</em></p>
               [<a href="assets/img/thermalring_paper.pdf">Paper</a>]
               [<a href="https://www.youtube.com/watch?v=j4l4NHX2QLM&t=1s">Video</a>]
 	      </p>
@@ -212,7 +214,8 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content"> 
             <p class="font-italic">
               <h5>Embodied Weather: Promoting Public Understanding of Extreme Weather Through Immersive Multi-Sensory Virtual Reality</h5>
-              <p><em>Pingchuan Ke, Kai-Ning Keng, Shanshan Jiang, <b>Shaoyu Cai</b>, Zhiyi Rong, and Kening Zhu. In The 17th International Conference on Virtual-Reality Continuum and its Applications in Industry, pp. 1-2. 2019.</em></p>
+              <p>Pingchuan Ke, Kai-Ning Keng, Shanshan Jiang, <b>Shaoyu Cai</b>, Zhiyi Rong, and Kening Zhu </p>
+	      <p><em>In The 17th International Conference on Virtual-Reality Continuum and its Applications in Industry, pp. 1-2. 2019.</em></p>
               [<a href="assets/img/weather_paper.pdf">Paper</a>]
               [<a href="https://www.youtube.com/watch?v=GqTk9XIP8mo&t=8s">Video</a>]
 	    </p>
@@ -226,7 +229,8 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content"> 
             <p class="font-italic">
               <h5>HapTwist: creating interactive haptic proxies in virtual reality using low-cost twistable artefacts</h5>
-              <p><em>Kening Zhu, Taizhou Chen, <b>Shaoyu Cai</b>, Feng Han, and Yi-Shiun Wu. In SIGGRAPH Asia 2018 Virtual & Augmented Reality, pp. 1-2. 2018.</em></p>
+              <p>Kening Zhu, Taizhou Chen, <b>Shaoyu Cai</b>, Feng Han, and Yi-Shiun Wu </p>
+	      <p><em>In SIGGRAPH Asia 2018 Virtual & Augmented Reality, pp. 1-2. 2018.</em></p>
               [<a href="assets/img/haptwist_paper.pdf">Paper</a>]
               [<a href="https://www.youtube.com/watch?v=SzRrm570jZA">Video</a>]
      	     </p>
