--- a/index.html
+++ b/index.html
@@ -154,7 +154,9 @@
             </div>
             <div class="col-lg-8 pt-4 pt-lg-0 content"> 
               <p class="font-italic">
-                <h5>FrictGAN: Frictional Signal Generation from Fabric Texture Images using Generative Adversarial Network (<b>Best Paper Audience Choice Award</b>)</h5>
+                <h5>FrictGAN: Frictional Signal Generation from Fabric Texture Images using Generative Adversarial Network (<div class="col-lg-2 col-md-2.2  pt-lg-4">
+              <img src="assets/img/friction.png" class="img-fluid" alt="">
+            </div><b>Best Paper Audience Choice Award</b>)</h5>
                 <p><b>Shaoyu Cai</b>, Yuki Ban, Takuji Narumi, and Kening Zhu</p> 
 		<p><em>In ICAT-EGVE2020: International Conference on Artificial Reality and Telexistence & Eurographics Symposium on Virtual Environments, pp. 11-15. The Eurographics Association, 2020.</em></p>
 		[<a href="assets/img/frictgan_paper.pdf">Paper</a>]
