--- a/index.html
+++ b/index.html
@@ -124,11 +124,10 @@
             
             
             <div class="resume-item">
-              <!--<h4>PhD in Creative Media</h4>
-              <h5>2019.9 - present</h5>
-              <p><em>Cai, Shaoyu, Pingchuan Ke, Takuji Narumi, and Kening Zhu. "ThermAirGlove: A pneumatic glove for thermal perception and material identification in virtual reality." In 2020 IEEE Conference on Virtual Reality and 3D User Interfaces (VR), pp. 248-257. IEEE, 2020.</em></p>-->
+              <p>[2021.03] FrictGAN was invited to submit an extended version of Computers & Graphics journal!</p>
+              <!--<p>[2020.02] One paper was submitted to IEEE Robotics and Automation Letters with IROS 2021!</p>-->
               <p>[2020.12] FrictGAN received Best Paper Audience Choice Award!</p>
-              <p>[2020.10] FrictGAN was accepted by ICAT-EGVE 2020.</p>
+              <!--<p>[2020.10] FrictGAN was accepted by ICAT-EGVE 2020.</p>-->
               <p class="font-italic"><a href="#more">More...</a></p>
             </div>
           </div>
@@ -154,10 +153,8 @@
             </div>
             <div class="col-lg-8 pt-4 pt-lg-0 content"> 
               <p class="font-italic">
-                <h5>FrictGAN: Frictional Signal Generation from Fabric Texture Images using Generative Adversarial Network (<div class="col-lg-2 col-md-2.2  pt-lg-4">
-              <img src="assets/img/friction.png" class="img-fluid" alt="">
-            </div><b>Best Paper Audience Choice Award</b>)</h5>
-                <p><b>Shaoyu Cai</b>, Yuki Ban, Takuji Narumi, and Kening Zhu</p> 
+                <h5>FrictGAN: Frictional Signal Generation from Fabric Texture Images using Generative Adversarial Network (<img src="assets/img/cup.png" height="20" width="20" /><b> Best Paper Audience Choice Award</b>)</h5>
+                <p><em><b>Shaoyu Cai</b>, Yuki Ban, Takuji Narumi, and Kening Zhu</em></p> 
 		<p><em>In ICAT-EGVE2020: International Conference on Artificial Reality and Telexistence & Eurographics Symposium on Virtual Environments, pp. 11-15. The Eurographics Association, 2020.</em></p>
 		[<a href="assets/img/frictgan_paper.pdf">Paper</a>]
 		[<a href="https://github.com/shaoyuca/FrictGAN">Code</a>]
@@ -172,7 +169,8 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content"> 
             <p class="font-italic">
               <h5>ThermAirGlove: A pneumatic glove for thermal perception and material identification in virtual reality</h5>
-              <p><em><b>Shaoyu Cai</b>, Pingchuan Ke, Takuji Narumi, and Kening Zhu. In 2020 IEEE Conference on Virtual Reality and 3D User Interfaces (VR), pp. 248-257. IEEE, 2020.</em></p>
+              <p><em><b>Shaoyu Cai</b>, Pingchuan Ke, Takuji Narumi, and Kening Zhu</em></p>
+              <p><em>In 2020 IEEE Conference on Virtual Reality and 3D User Interfaces (VR), pp. 248-257. IEEE, 2020.</em></p>
                [<a href="assets/img/thermairglove_paper.pdf">Paper</a>]
                [<a href="https://www.youtube.com/watch?v=VgsmilcO1yU">Video</a>]
 	      </p>
@@ -186,8 +184,8 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content"> 
             <p class="font-italic">
               <h5>Demonstration of thermairglove: A pneumatic glove for material perception in virtual reality through thermal and force feedback</h5>
-              <p><b>Shaoyu Cai</b>, Pingchuan Ke, Shanshan Jiang, Takuji Narumi, and Kening Zhu</p>
-	      <p><em> In SIGGRAPH Asia 2019 Emerging Technologies, pp. 11-12. 2019.</em></p>
+              <p><em><b>Shaoyu Cai</b>, Pingchuan Ke, Shanshan Jiang, Takuji Narumi, and Kening Zhu</em></p>
+	            <p><em> In SIGGRAPH Asia 2019 Emerging Technologies, pp. 11-12. 2019.</em></p>
               [<a href="assets/img/thermairglove_etech.pdf">Paper</a>]
               [<a href="https://www.youtube.com/watch?v=VgsmilcO1yU">Video</a>]
 	    </p>
@@ -201,7 +199,7 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content"> 
             <p class="font-italic">
               <h5>A sense of ice and fire: Exploring thermal feedback with multiple thermoelectric-cooling elements on a smart ring</h5>
-              <p>Kening Zhu, Simon Perrault, Taizhou Chen, <b>Shaoyu Cai</b>, and Roshan Lalintha Peiris</p>
+              <p><em>Kening Zhu, Simon Perrault, Taizhou Chen, <b>Shaoyu Cai</b>, and Roshan Lalintha Peiris</em></p>
 	      <p><em>International Journal of Human-Computer Studies 130 (2019): 234-247.</em></p>
               [<a href="assets/img/thermalring_paper.pdf">Paper</a>]
               [<a href="https://www.youtube.com/watch?v=j4l4NHX2QLM&t=1s">Video</a>]
@@ -216,8 +214,8 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content"> 
             <p class="font-italic">
               <h5>Embodied Weather: Promoting Public Understanding of Extreme Weather Through Immersive Multi-Sensory Virtual Reality</h5>
-              <p>Pingchuan Ke, Kai-Ning Keng, Shanshan Jiang, <b>Shaoyu Cai</b>, Zhiyi Rong, and Kening Zhu </p>
-	      <p><em>In The 17th International Conference on Virtual-Reality Continuum and its Applications in Industry, pp. 1-2. 2019.</em></p>
+              <p><em>Pingchuan Ke, Kai-Ning Keng, Shanshan Jiang, <b>Shaoyu Cai</b>, Zhiyi Rong, and Kening Zhu </em></p>
+	            <p><em>In The 17th International Conference on Virtual-Reality Continuum and its Applications in Industry, pp. 1-2. 2019.</em></p>
               [<a href="assets/img/weather_paper.pdf">Paper</a>]
               [<a href="https://www.youtube.com/watch?v=GqTk9XIP8mo&t=8s">Video</a>]
 	    </p>
@@ -231,8 +229,8 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content"> 
             <p class="font-italic">
               <h5>HapTwist: creating interactive haptic proxies in virtual reality using low-cost twistable artefacts</h5>
-              <p>Kening Zhu, Taizhou Chen, <b>Shaoyu Cai</b>, Feng Han, and Yi-Shiun Wu </p>
-	      <p><em>In SIGGRAPH Asia 2018 Virtual & Augmented Reality, pp. 1-2. 2018.</em></p>
+              <p><em>Kening Zhu, Taizhou Chen, <b>Shaoyu Cai</b>, Feng Han, and Yi-Shiun Wu </em></p>
+	            <p><em>In SIGGRAPH Asia 2018 Virtual & Augmented Reality, pp. 1-2. 2018.</em></p>
               [<a href="assets/img/haptwist_paper.pdf">Paper</a>]
               [<a href="https://www.youtube.com/watch?v=SzRrm570jZA">Video</a>]
      	     </p>
@@ -456,6 +454,7 @@
 <!--           <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p> -->
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
+            <p class="font-italic">[2021.03] FrictGAN was invited to submit an extended version of Computers & Graphics journal!</p>
             <p class="font-italic">[2020.12] FrictGAN received Best Paper Audience Choice Award!</p>
             <p class="font-italic">[2020.10] FrictGAN was accepted by ICAT-EGVE 2020!</p>
             <p class="font-italic">[2020.03] ThermAirGlove was accepted by IEEE VR 2020!</p>
