--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             
             
             <div class="resume-item">
-              <p>[2021.03] FrictGAN was invited to submit an extended version of Computers & Graphics journal!</p>
+              <p>[new! 2021.07] One paper was accepted by IEEE Robotics and Automation Letters with IROS 2021!</p>
               <!--<p>[2020.02] One paper was submitted to IEEE Robotics and Automation Letters with IROS 2021!</p>-->
               <p>[2020.12] FrictGAN received Best Paper Audience Choice Award!</p>
               <!--<p>[2020.10] FrictGAN was accepted by ICAT-EGVE 2020.</p>-->
