--- a/index.html
+++ b/index.html
@@ -125,7 +125,6 @@
             
             <div class="resume-item">
               <p>[2021.07] One paper was accepted by IEEE Robotics and Automation Letters with IROS 2021!</p>
-              <!--<p>[2020.02] One paper was submitted to IEEE Robotics and Automation Letters with IROS 2021!</p>-->
               <p>[2020.12] FrictGAN received Best Paper Audience Choice Award!</p>
               <!--<p>[2020.10] FrictGAN was accepted by ICAT-EGVE 2020.</p>-->
               <p class="font-italic"><a href="#more">More...</a></p>
@@ -454,10 +453,10 @@
 <!--           <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p> -->
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <p class="font-italic">[2021.03] FrictGAN was invited to submit an extended version of Computers & Graphics journal!</p>
+            <!--<p class="font-italic">[2021.03] FrictGAN was invited to submit an extended version of Computers & Graphics journal!</p>-->
             <p class="font-italic">[2020.12] FrictGAN received Best Paper Audience Choice Award!</p>
-            <p class="font-italic">[2020.10] FrictGAN was accepted by ICAT-EGVE 2020!</p>
-            <p class="font-italic">[2020.03] ThermAirGlove was accepted by IEEE VR 2020!</p>
+            <p class="font-italic">[2020.10] One paper was accepted by ICAT-EGVE 2020!</p>
+            <p class="font-italic">[2020.03] One paper was accepted by IEEE VR 2020!</p>
 
           
         </div>
