--- a/index.html
+++ b/index.html
@@ -145,7 +145,23 @@
         </div>
   
         <div class="row">
-        <!-- paper1 -->
+        <!-- paper0 -->
+        <div class="row">
+          <div class="col-lg-2 col-md-2 pt-lg-4">
+            <img src="assets/img/residuefusion.png" class="img-fluid" alt="">
+          </div>
+          <div class="col-lg-8 pt-4 pt-lg-0 content"> 
+            <p class="font-italic">
+              <h5>Visual-Tactile Cross-Modal Data Generation using Residue-Fusion GAN with Feature-Matching and Perceptual Losses</h5>
+              <p><em><b>Shaoyu Cai</b>, Kening Zhu, Yuki Ban, and Takuji Narumi</em></p>
+              <p><em>In IEEE Robotics and Automation Letters with IROS 2021, doi: 10.1109/LRA.2021.3095925.</em></p>
+               [<a href="assets/img/Visual_Tactile_Generation.pdf">Paper</a>]
+               [<a href="https://github.com/shaoyuca/Visual-Tactile-Data-Generation">Code</a>]
+	      </p>
+          </div>
+        </div>     
+
+          <!-- paper1 -->
           <div class="row">
             <div class="col-lg-2 col-md-2.2  pt-lg-4">
               <img src="assets/img/friction.png" class="img-fluid" alt="">
@@ -154,12 +170,13 @@
               <p class="font-italic">
                 <h5>FrictGAN: Frictional Signal Generation from Fabric Texture Images using Generative Adversarial Network (<img src="assets/img/cup.png" height="20" width="20" /><b> Best Paper Audience Choice Award</b>)</h5>
                 <p><em><b>Shaoyu Cai</b>, Yuki Ban, Takuji Narumi, and Kening Zhu</em></p> 
-		<p><em>In ICAT-EGVE2020: International Conference on Artificial Reality and Telexistence & Eurographics Symposium on Virtual Environments, pp. 11-15. The Eurographics Association, 2020.</em></p>
-		[<a href="assets/img/frictgan_paper.pdf">Paper</a>]
-		[<a href="https://github.com/shaoyuca/FrictGAN">Code</a>]
-              </p>
+		            <p><em>In ICAT-EGVE2020: International Conference on Artificial Reality and Telexistence & Eurographics Symposium on Virtual Environments, pp. 11-15. The Eurographics Association, 2020.</em></p>
+		            [<a href="assets/img/frictgan_paper.pdf">Paper</a>]
+		            [<a href="https://github.com/shaoyuca/FrictGAN">Code</a>]
+          </p>
             </div>
           </div>
+
         <!-- paper2 -->
         <div class="row">
           <div class="col-lg-2 col-md-2 pt-lg-4">
