--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             <p class="font-italic">
               <h5>Visual-Tactile Cross-Modal Data Generation using Residue-Fusion GAN with Feature-Matching and Perceptual Losses</h5>
               <p><em><b>Shaoyu Cai</b>, Kening Zhu, Yuki Ban, and Takuji Narumi</em></p>
-              <p><em>In IEEE Robotics and Automation Letters with IROS 2021, doi: 10.1109/LRA.2021.3095925.</em></p>
+              <p><em>In IEEE Robotics and Automation Letters (RA-L) with IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS 2021).</em></p>
                [<a href="assets/img/Visual_Tactile_Generation.pdf">Paper</a>]
                [<a href="https://github.com/shaoyuca/Visual-Tactile-Data-Generation">Code</a>]
 	      </p>
