--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
               I am currently a Ph.D student from School of Creative Media, City University of Hong Kong,
               as well as a member of <a href="https://meilab-hk.github.io/">Multimodal and Embodied Interaction (MEI)</a> lab supervised by <a href="http://www.cityu.edu.hk/stfprofile/keninzhu.htm">Prof. Kening Zhu</a>.
               My research interest lies in the field of Human-Computer Interaction (HCI), especially for Cross-modal Learning (e.g., from vision to touch) and Multi-modal Interaction through 
-              Deep Learning methods. I am also interested in Haptic design for Virtual/Augmented/Mixed Reality.
+              Deep Learning methods. I am also interested in Haptic design for Virtual and Augmented Reality.
               <div class="email" class="font-italic">
                 <p><b>Contact Me:</b> <em>shaoyu.cai [AT] my [DOT] cityu [DOT] edu [DOT] hk</em></p> 
               </div>
