--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
             <p style="text-align:justify" class="font-italic">
               I am currently a Ph.D student from School of Creative Media, City University of Hong Kong,
               as well as a member of <a href="https://meilab-hk.github.io/">Multimodal and Embodied Interaction (MEI)</a> lab supervised by <a href="http://www.cityu.edu.hk/stfprofile/keninzhu.htm">Prof. Kening Zhu</a>.
-              My research interest lies in the field of Human-Computer Interaction (HCI), especially for Cross-modal Learning (e.g., from vision to touch) and Multi-modal Interaction through 
-              Deep Learning methods. I am also interested in Haptic design for Virtual and Augmented Reality.
+              My research interest lies in the field of Human-Computer Interaction (HCI), especially for cross-modal generation (e.g., from vision to touch) and deep-learning-based tactile texture modelling and rendering. 
+              I am also interested in haptic interface design and psychophysical perception for virtual reality and augmented reality.
               <div class="email" class="font-italic">
                 <p><b>Contact Me:</b> <em>shaoyu.cai [AT] my [DOT] cityu [DOT] edu [DOT] hk</em></p> 
               </div>
