--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
               <h5>GAN-based image-to-friction generation for tactile simulation of fabric material </h5>
               <p><em><b>Shaoyu Cai</b>, Lu Zhao, Yuki Ban, Takuji Narumi, Yue Liu and Kening Zhu</em></p>
               <p><em>In Computers & Graphics (2021).</em></p>
-               [<a href="https://github.com/shaoyuca/FrictGAN-Image-to-Friction-Generation">Paper</a>]
+               [<a href="assets/img/cag.pdf">Paper</a>]
                [<a href="https://github.com/shaoyuca/FrictGAN-Image-to-Friction-Generation">Code</a>]
 	      </p>
           </div>
