--- a/index.html
+++ b/index.html
@@ -421,6 +421,31 @@
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/cg.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Image-to-Friction-Generation</h4>
+                <p>Computers & Graphics</p>
+                <div class="portfolio-links">
+                  <a href="fabricgan.html" class="Image-to-Friction-Generation" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/teaser.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Visual-Tactile-Data-Generation</h4>
+                <p>RA-L & IROS 2021</p>
+                <div class="portfolio-links">
+                  <a href="visualtactile.html" class="visualtactile" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
