--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           <div class="col-lg-3 col-md-4">
             <img src="assets/img/me.jpg" class="img-fluid" alt="">
           </div>
-          <div class="col-lg-7 pt-4 pt-lg-0 content">
+          <div class="col-lg-8 pt-4 pt-lg-0 content">
             <style>
               p.serif{font-family:"Times New Roman",Times,serif;}
               p.sansserif{font-family:Arial,Helvetica,sans-serif;}
@@ -148,10 +148,10 @@
         <div class="row">
         <!-- paper -->
         <div class="row">
-          <div class="col-lg-2 col-md-2 pt-lg-4">
+          <div class="col-lg-2 col-md-3 pt-lg-4">
             <img src="assets/img/cg.png" class="img-fluid" alt="">
           </div>
-          <div class="col-lg-8 pt-4 pt-lg-0 content"> 
+          <div class="col-lg-10 pt-4 pt-lg-0 content"> 
             <p class="font-italic">
               <h5>GAN-based image-to-friction generation for tactile simulation of fabric material </h5>
               <p><em><b>Shaoyu Cai</b>, Lu Zhao, Yuki Ban, Takuji Narumi, Yue Liu and Kening Zhu</em></p>
@@ -164,10 +164,10 @@
 
         <!-- paper -->
         <div class="row">
-          <div class="col-lg-2 col-md-2 pt-lg-4">
+          <div class="col-lg-2 col-md-3 pt-lg-4">
             <img src="assets/img/weightwalk.png" class="img-fluid" alt="">
           </div>
-          <div class="col-lg-8 pt-4 pt-lg-0 content"> 
+          <div class="col-lg-10 pt-4 pt-lg-0 content"> 
             <p class="font-italic">
               <h5>WeightedWalking: Propeller-based On-leg Force Simulation of Walking in Fluid Materials in VR</h5>
               <p><em>Pingchuan Ke, <b>Shaoyu Cai</b>, Lantian Xu and Kening Zhu</em></p>
@@ -183,7 +183,7 @@
           <div class="col-lg-2 col-md-2 pt-lg-4">
             <img src="assets/img/residuefusion.png" class="img-fluid" alt="">
           </div>
-          <div class="col-lg-8 pt-4 pt-lg-0 content"> 
+          <div class="col-lg-10 pt-4 pt-lg-0 content"> 
             <p class="font-italic">
               <h5>Visual-Tactile Cross-Modal Data Generation using Residue-Fusion GAN with Feature-Matching and Perceptual Losses</h5>
               <p><em><b>Shaoyu Cai</b>, Kening Zhu, Yuki Ban, and Takuji Narumi</em></p>
@@ -199,9 +199,10 @@
             <div class="col-lg-2 col-md-2.2  pt-lg-4">
               <img src="assets/img/friction.png" class="img-fluid" alt="">
             </div>
-            <div class="col-lg-8 pt-4 pt-lg-0 content"> 
+            <div class="col-lg-10 pt-4 pt-lg-0 content"> 
               <p class="font-italic">
-                <h5>FrictGAN: Frictional Signal Generation from Fabric Texture Images using Generative Adversarial Network (<img src="assets/img/cup.png" height="20" width="20" /><b> Best Paper Audience Choice Award</b>)</h5>
+                <h5>FrictGAN: Frictional Signal Generation from Fabric Texture Images using Generative Adversarial Network</h5>
+                <h5><img src="assets/img/cup.png" height="20" width="20" /><b> Best Paper Audience Choice Award</b></h5>
                 <p><em><b>Shaoyu Cai</b>, Yuki Ban, Takuji Narumi, and Kening Zhu</em></p> 
 		            <p><em>In ICAT-EGVE2020: International Conference on Artificial Reality and Telexistence & Eurographics Symposium on Virtual Environments, pp. 11-15. The Eurographics Association, 2020.</em></p>
 		            [<a href="assets/img/frictgan_paper.pdf">Paper</a>]
@@ -215,7 +216,7 @@
           <div class="col-lg-2 col-md-2 pt-lg-4">
             <img src="assets/img/IEEE VR 2020.jpg" class="img-fluid" alt="">
           </div>
-          <div class="col-lg-8 pt-4 pt-lg-0 content"> 
+          <div class="col-lg-10 pt-4 pt-lg-0 content"> 
             <p class="font-italic">
               <h5>ThermAirGlove: A pneumatic glove for thermal perception and material identification in virtual reality</h5>
               <p><em><b>Shaoyu Cai</b>, Pingchuan Ke, Takuji Narumi, and Kening Zhu</em></p>
@@ -230,7 +231,7 @@
           <div class="col-lg-2 col-md-2  pt-lg-4">
             <img src="assets/img/glove.png" class="img-fluid" alt="">
           </div>
-          <div class="col-lg-8 pt-4 pt-lg-0 content"> 
+          <div class="col-lg-10 pt-4 pt-lg-0 content"> 
             <p class="font-italic">
               <h5>Demonstration of thermairglove: A pneumatic glove for material perception in virtual reality through thermal and force feedback</h5>
               <p><em><b>Shaoyu Cai</b>, Pingchuan Ke, Shanshan Jiang, Takuji Narumi, and Kening Zhu</em></p>
@@ -245,7 +246,7 @@
           <div class="col-lg-2 col-md-2  pt-lg-4">
             <img src="assets/img/thermring.png" class="img-fluid" alt="">
           </div>
-          <div class="col-lg-8 pt-4 pt-lg-0 content"> 
+          <div class="col-lg-10 pt-4 pt-lg-0 content"> 
             <p class="font-italic">
               <h5>A sense of ice and fire: Exploring thermal feedback with multiple thermoelectric-cooling elements on a smart ring</h5>
               <p><em>Kening Zhu, Simon Perrault, Taizhou Chen, <b>Shaoyu Cai</b>, and Roshan Lalintha Peiris</em></p>
@@ -260,7 +261,7 @@
           <div class="col-lg-2 col-md-2  pt-lg-4">
             <img src="assets/img/weather.png" class="img-fluid" alt="">
           </div>
-          <div class="col-lg-8 pt-4 pt-lg-0 content"> 
+          <div class="col-lg-10 pt-4 pt-lg-0 content"> 
             <p class="font-italic">
               <h5>Embodied Weather: Promoting Public Understanding of Extreme Weather Through Immersive Multi-Sensory Virtual Reality</h5>
               <p><em>Pingchuan Ke, Kai-Ning Keng, Shanshan Jiang, <b>Shaoyu Cai</b>, Zhiyi Rong, and Kening Zhu </em></p>
@@ -275,7 +276,7 @@
           <div class="col-lg-2 col-md-2 pt-lg-2">
             <img src="assets/img/haptwist.jpg" class="img-fluid" alt="">
           </div>
-          <div class="col-lg-8 pt-4 pt-lg-0 content"> 
+          <div class="col-lg-10 pt-4 pt-lg-0 content"> 
             <p class="font-italic">
               <h5>HapTwist: creating interactive haptic proxies in virtual reality using low-cost twistable artefacts</h5>
               <p><em>Kening Zhu, Taizhou Chen, <b>Shaoyu Cai</b>, Feng Han, and Yi-Shiun Wu </em></p>
@@ -309,12 +310,12 @@
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
               <div class="row">
-              	<div class="col-sm-8">
+              	<div class="col-sm-10">
               <h4>PhD in Creative Media</h4> 
               <h5>2019.9 - present</h5>
               <p><em>School of Creative Media, City University of Hong Kong, Hong Kong SAR, China</em></p>
               <p>Supervisor: <a href="http://www.cityu.edu.hk/stfprofile/keninzhu.htm">Prof. Kening Zhu</a></p>
-              <p>Reseach topics: Cross-modal Interaction, Tactile Rendering, Virtual/Augmentated Reality </p>
+              <p>Reseach topics: Cross-modal Learning, Tactile Rendering, Virtual/Augmentated Reality </p>
             </div>
 
             <div class="col-sm-1">
@@ -326,7 +327,7 @@
 
             <div class="resume-item">
               <div class="row">
-                <div class="col-sm-8">
+                <div class="col-sm-10">
               <h4>Bachelor of Engineering</h4>
               <h5>2014.9 - 2018.6</h5>
               <p><em>College of Engineering and Technology, Huazhong Agricultural University, Wuhan, China</em></p>
@@ -344,7 +345,7 @@
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
               <div class="row">
-                <div class="col-sm-8">
+                <div class="col-sm-10">
               <h4>Visiting student</h4>
               <h5>2020.1 - 2020.3</h5>
               <p><em>Graduate of Information Science and Technology, The University of Tokyo, Tokyo, Japan </em></p>
@@ -360,7 +361,7 @@
 
             <div class="resume-item">
               <div class="row">
-                <div class="col-sm-8">
+                <div class="col-sm-10">
               <h4>Research assistant</h4>
               <h5>2018.8 - 2019.8</h5>
               <p><em>School of Creative Media, City University of Hong Kong, Hong Kong SAR, China</em></p>
@@ -376,7 +377,7 @@
 
         <div class="resume-item">
           <div class="row">
-            <div class="col-sm-8">
+            <div class="col-sm-10">
           <h4>Visiting student</h4>
           <h5>2016.9 - 2017.2</h5>
           <p><em>Department of Electrical Engineering, National Taipei University, Taiwan, China</em></p>
