--- a/frictgan.html
+++ b/frictgan.html
@@ -48,7 +48,7 @@
           <div class="col-md-6">
             <div class="portfolio-details-slider swiper-container">
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/friction.png" alt="">
+                  <img src="assets/img/friction.png" alt="">
                 </div>
 
             </div>
