--- a/index.html
+++ b/index.html
@@ -149,13 +149,13 @@
         <!-- paper -->
         <div class="row">
           <div class="col-lg-2 col-md-3 pt-lg-4">
-            <img src="assets/img/cg.png" class="img-fluid" alt="">
+            <img src="assets/img/cg.JPG" class="img-fluid" alt="">
           </div>
           <div class="col-lg-10 pt-4 pt-lg-0 content"> 
             <p class="font-italic">
               <h5>GAN-based image-to-friction generation for tactile simulation of fabric material </h5>
               <p><em><b>Shaoyu Cai</b>, Lu Zhao, Yuki Ban, Takuji Narumi, Yue Liu and Kening Zhu</em></p>
-              <p><em>In Computers & Graphics (2021).</em></p>
+              <p><em>In Computers & Graphics 2021.</em></p>
                [<a href="assets/img/cag.pdf">Paper</a>]
                [<a href="https://github.com/shaoyuca/FrictGAN-Image-to-Friction-Generation">Code</a>]
 	      </p>
@@ -165,7 +165,7 @@
         <!-- paper -->
         <div class="row">
           <div class="col-lg-2 col-md-3 pt-lg-4">
-            <img src="assets/img/weightwalk.png" class="img-fluid" alt="">
+            <img src="assets/img/weightwalk.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-10 pt-4 pt-lg-0 content"> 
             <p class="font-italic">
@@ -181,7 +181,7 @@
         <!-- paper0 -->
         <div class="row">
           <div class="col-lg-2 col-md-2 pt-lg-4">
-            <img src="assets/img/residuefusion.png" class="img-fluid" alt="">
+            <img src="assets/img/residuefusion.JPG" class="img-fluid" alt="">
           </div>
           <div class="col-lg-10 pt-4 pt-lg-0 content"> 
             <p class="font-italic">
@@ -197,12 +197,12 @@
           <!-- paper1 -->
           <div class="row">
             <div class="col-lg-2 col-md-2.2  pt-lg-4">
-              <img src="assets/img/friction.png" class="img-fluid" alt="">
+              <img src="assets/img/frictgan.JPG" class="img-fluid" alt="">
             </div>
             <div class="col-lg-10 pt-4 pt-lg-0 content"> 
               <p class="font-italic">
                 <h5>FrictGAN: Frictional Signal Generation from Fabric Texture Images using Generative Adversarial Network</h5>
-                <h5><img src="assets/img/cup.png" height="20" width="20" /><b> Best Paper Audience Choice Award</b></h5>
+                <h5>(<img src="assets/img/cup.png" height="20" width="20" /><b> Best Paper Audience Choice Award)</b></h5>
                 <p><em><b>Shaoyu Cai</b>, Yuki Ban, Takuji Narumi, and Kening Zhu</em></p> 
 		            <p><em>In ICAT-EGVE2020: International Conference on Artificial Reality and Telexistence & Eurographics Symposium on Virtual Environments, pp. 11-15. The Eurographics Association, 2020.</em></p>
 		            [<a href="assets/img/frictgan_paper.pdf">Paper</a>]
@@ -229,7 +229,7 @@
 
         <div class="row">
           <div class="col-lg-2 col-md-2  pt-lg-4">
-            <img src="assets/img/glove.png" class="img-fluid" alt="">
+            <img src="assets/img/glove.JPG" class="img-fluid" alt="">
           </div>
           <div class="col-lg-10 pt-4 pt-lg-0 content"> 
             <p class="font-italic">
@@ -244,7 +244,7 @@
 
         <div class="row">
           <div class="col-lg-2 col-md-2  pt-lg-4">
-            <img src="assets/img/thermring.png" class="img-fluid" alt="">
+            <img src="assets/img/thermring.JPG" class="img-fluid" alt="">
           </div>
           <div class="col-lg-10 pt-4 pt-lg-0 content"> 
             <p class="font-italic">
@@ -259,7 +259,7 @@
 
         <div class="row">
           <div class="col-lg-2 col-md-2  pt-lg-4">
-            <img src="assets/img/weather.png" class="img-fluid" alt="">
+            <img src="assets/img/weather.JPG" class="img-fluid" alt="">
           </div>
           <div class="col-lg-10 pt-4 pt-lg-0 content"> 
             <p class="font-italic">
@@ -424,10 +424,10 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/cg.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/cg.JPG" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Image-to-Friction-Generation</h4>
-                <p>Computers & Graphics</p>
+                <p>Computers & Graphics 2021</p>
                 <div class="portfolio-links">
                   <a href="fabricgan.html" class="Image-to-Friction-Generation" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
@@ -437,7 +437,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/teaser.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/teaser.JPG" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Visual-Tactile-Data-Generation</h4>
                 <p>RA-L & IROS 2021</p>
@@ -463,7 +463,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app portfolio-item filter-card">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/glove.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/glove.JPG" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>ThermAirGlove</h4>
                 <p>IEEE VR 2020 & Siggraph Asia 2019</p>
@@ -479,7 +479,7 @@
               <img src="assets/img/portfolio/ring.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Thermal Ring</h4>
-                <p>INT J of Human-Computer Studies</p>
+                <p>INT J of Human-Computer Studies 2019</p>
                 <div class="portfolio-links">
                   <a href="thermalring.html" class="thermalring" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
@@ -499,6 +499,19 @@
               </div>
             </div>
           </div>
+
+          <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-app portfolio-item filter-card">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/haptwist.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>HapTwist</h4>
+                <p>Siggraph Asia 2018</p>
+                <div class="portfolio-links">
+                  <a href="haptwist.html" class="haptwist" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div> -->
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app portfolio-item filter-card">
             <div class="portfolio-wrap">
