--- a/fabricgan.html
+++ b/fabricgan.html
@@ -48,7 +48,7 @@
           <div class="col-md-6">
             <div class="portfolio-details-slider swiper-container">
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/cg.png" alt="">
+                  <img src="assets/img/portfolio/cag2new.png" alt="">
                 </div>
 
             </div>
