--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
           <!-- paper1 -->
           <div class="row">
             <div class="col-lg-2 col-md-3  pt-lg-4">
-              <img src="assets/img/frictgan.JPG" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/FrictGAN-cover.JPG" class="img-fluid" alt="">
             </div>
             <div class="col-lg-10 pt-4 pt-lg-0 content"> 
               <p class="font-italic">
