--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
             <p class="font-italic">
               <h5>Visual-Tactile Cross-Modal Data Generation using Residue-Fusion GAN with Feature-Matching and Perceptual Losses</h5>
               <p><em><b>Shaoyu Cai</b>, Kening Zhu, Yuki Ban, and Takuji Narumi</em></p>
-              <p><em>In IEEE Robotics and Automation Letters (RA-L) 6(4): 7525-7532, and IROS 2021.</em></p>
+              <p><em>In IEEE Robotics and Automation Letters (RA-L) & IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS 2021).</em></p>
                [<a href="assets/img/Visual_Tactile_Generation.pdf">Paper</a>]
                [<a href="https://github.com/shaoyuca/Visual-Tactile-Data-Generation">Code</a>]
 	      </p>
@@ -197,14 +197,14 @@
           <!-- paper1 -->
           <div class="row">
             <div class="col-lg-2 col-md-3  pt-lg-4">
-              <img src="assets/img/portfolio/FrictGAN-cover.JPG" class="img-fluid" alt="">
+              <img src="assets/img/frictgan.JPG" class="img-fluid" alt="">
             </div>
             <div class="col-lg-10 pt-4 pt-lg-0 content"> 
               <p class="font-italic">
                 <h5>FrictGAN: Frictional Signal Generation from Fabric Texture Images using Generative Adversarial Network</h5>
-                <h5>(<img src="assets/img/cup.png" height="20" width="20" /><b> Best Paper Audience Choice Award)</b></h5>
-                <p><em><b>Shaoyu Cai</b>, Yuki Ban, Takuji Narumi, and Kening Zhu</em></p> 
-		            <p><em>In ICAT-EGVE2020: International Conference on Artificial Reality and Telexistence & Eurographics Symposium on Virtual Environments, pp. 11-15. The Eurographics Association, 2020.</em></p>
+                <h5><img src="assets/img/cup.png" height="20" width="20" /><b> Best Paper Audience Choice Award</b></h5>
+                <p><em><b>Shaoyu Cai</b>, Yuki Ban, Takuji Narumi, and Kening Zhu </em></p> 
+		            <p><em>In International Conference on Artificial Reality and Telexistence & Eurographics Symposium on Virtual Environments (ICAT-EGVE 2020), pp. 11-15. The Eurographics Association, 2020.</em></p>
 		            [<a href="assets/img/frictgan_paper.pdf">Paper</a>]
 		            [<a href="https://github.com/shaoyuca/FrictGAN">Code</a>]
           </p>
