--- a/index.html
+++ b/index.html
@@ -194,6 +194,21 @@
           </div>
         </div>     
 
+        <!-- paper2 -->
+        <div class="row">
+          <div class="col-lg-2 col-md-3 pt-lg-4">
+            <img src="assets/img/frictgan.JPG" class="img-fluid" alt="">
+          </div>
+          <div class="col-lg-10 pt-4 pt-lg-0 content"> 
+            <p class="font-italic">
+              <h5>ThermAirGlove: A pneumatic glove for thermal perception and material identification in virtual reality</h5>
+              <p><em><b>Shaoyu Cai</b>, Pingchuan Ke, Takuji Narumi, and Kening Zhu</em></p>
+              <p><em>In 2020 IEEE Conference on Virtual Reality and 3D User Interfaces (VR), pp. 248-257. IEEE, 2020.</em></p>
+               [<a href="assets/img/thermairglove_paper.pdf">Paper</a>]
+               [<a href="https://www.youtube.com/watch?v=VgsmilcO1yU">Video</a>]
+	      </p>
+          </div>
+        </div>
 
 
         <!-- paper2 -->
