--- a/index.html
+++ b/index.html
@@ -202,6 +202,7 @@
           <div class="col-lg-10 pt-4 pt-lg-0 content"> 
             <p class="font-italic">
               <h5>FrictGAN: Frictional Signal Generation from Fabric Texture Images using Generative Adversarial Network</h5>
+              <h5><b> Best Paper Audience Choice Award </b></h5>
               <p><em><b>Shaoyu Cai</b>, Yuki Ban, Takuji Narumi, and Kening Zhu</em></p>
               <p><em>In International Conference on Artificial Reality and Telexistence & Eurographics Symposium on Virtual Environments (ICAT-EGVE 2020), pp. 11-15. The Eurographics Association, 2020.</em></p>
               [<a href="assets/img/frictgan_paper.pdf">Paper</a>]
@@ -227,7 +228,6 @@
           </div>
         </div>
 
-        
         <div class="row">
           <div class="col-lg-2 col-md-3 pt-lg-4">
             <img src="assets/img/glove.JPG" class="img-fluid" alt="">
