--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
         <!-- paper2 -->
         <div class="row">
           <div class="col-lg-2 col-md-3 pt-lg-4">
-            <img src="assets/img/IEEE VR 2020.jpg" class="img-fluid" alt="">
+            <img src="assets/img/glove.JPG" class="img-fluid" alt="">
           </div>
           <div class="col-lg-10 pt-4 pt-lg-0 content"> 
             <p class="font-italic">
@@ -230,7 +230,7 @@
 
         <div class="row">
           <div class="col-lg-2 col-md-3 pt-lg-4">
-            <img src="assets/img/glove.JPG" class="img-fluid" alt="">
+            <img src="assets/img/ett.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-10 pt-4 pt-lg-0 content"> 
             <p class="font-italic">
